March release (#741)
* Fix sidebar title animation not working #660

* Fixed wins placeholder not in lobby sidebar #658

* Fixed NPE when clicking outside of shop inventory #664

* Fixed command error when lobby location is not set

* Added unformatted player name to kill message and bed destroy

* Added Netherite armor to 1.16+ (#657)

* Added missing items in v1_12_R1

* Fixed level just showing numer (#661)

* expose sidebar on API

* a few updates (#632)

* Italian Language Update

* Fix Moneys reward team-support on Solo & update variables names

* add sidebar init event

* fix team identifier length (#682)

* Bug fixes and placeholder adjustments (#685)

read pr details

* fix no tab formatting for first player (#692)

* fix losing permanent items on rejoin (#385)

* fix scoreboard getting send twice (#690)

* fix void tp on newer servers

* fix swords disappearing (#686)

* fix invisibility potion compatibility with 1.8.8

* fix lobby tablist (#701)

* Add translation for Simplified Chinese (#628)

Co-authored-by: hugeBlack <wwkq03@outlook.com>
Co-authored-by: YukiEnd233 <85435560+YukiEnd233@users.noreply.github.com>

* Remove hand from hideArmor

* fix placeholders

* Fix elapsed time always null (#574)

* fix header and footer

* clean up

* should fix #699

* Remove Deprecation Warning for Version and Update getServerVersion Methods (#623)

* Remove Version Deprecation Warning

* update methods that use getServerVersion()

* Update Sidebar API link in README.md for new sidebar

* More ReadME changes

* Back to Java 11 and some clean up

* Mark PrePartyListener for removal

* Massive Clean up

* Improve TeamEliminatedEvent JavaDoc

* Updates

* fix #712
fix #681

* Add user texture to player head (#333)

* Add gamesPlayed placeholder

* Fixed placeholder typos

* remove unnecessary teams

* fix placeholder

completely fix #724

* fix player name invisible on 1.